2.1.1. Парсинг